<resources>
    <string name="app_name">MyClosetApplication</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_closet">옷장</string>

    <string name="title_cody">코디</string>

    <string name="title_board">게시판</string>

    <string name="title_my">My</string>

    <!-- TODO: Remove or change this placeholder text -->


    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
