<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.myclosetapplication.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.myclosetapplication.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.myclosetapplication.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_closet"
        android:name="com.myclosetapplication.fragments.ClosetFragment"
        android:label="@string/title_closet"
        tools:layout="@layout/fragment_closet" />

    <fragment
        android:id="@+id/navigation_cody"
        android:name="com.myclosetapplication.fragments.CodyFragment"
        android:label="@string/title_cody"
        tools:layout="@layout/fragment_cody" />

    <fragment
        android:id="@+id/navigation_board"
        android:name="com.myclosetapplication.fragments.BoardFragment"
        android:label="@string/title_board"
        tools:layout="@layout/fragment_board" />

    <fragment
        android:id="@+id/navigation_my"
        android:name="com.myclosetapplication.fragments.MyFragment"
        android:label="@string/title_my"
        tools:layout="@layout/fragment_my" />
</navigation>